fix: page stretching (#41)

--- a/app/assets/styling/style.css
+++ b/app/assets/styling/style.css
@@ -26,6 +26,7 @@ body {
   max-width: 110rem;
   margin: 0 auto;
   padding: 0 1rem;
+  box-sizing: border-box;
 }
 
 .content-limit {
